--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 
 serde_json = "1.*"
 ureq = {version = "2.*", features = ["json"]}
-clap = "4.*"
+clap = {version = "4.*", features = ["derive"]}
