--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 serde_json = "1.*"
 ureq = {version = "2.*", features = ["json"]}
 clap = {version = "4.*", features = ["derive"]}
+directories = "5.*"
 
 [profile.release]
 opt-level = 2
