--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = "1.*"
 ureq = {version = "2.*", features = ["json"]}
 clap = {version = "4.*", features = ["derive"]}
 directories = "5.*"
+serde = {version = "1.0.164", features = ["derive"]}
 
 [profile.release]
 opt-level = 2
